[gd_scene load_steps=4 format=3 uid="uid://d28j25dgsu6p6"]

[ext_resource type="Script" path="res://Archive/Levels/SortingLevel/Trash/banaan.gd" id="1_as36p"]
[ext_resource type="Texture2D" uid="uid://c07c4xy2wmt0r" path="res://Archive/Levels/SortingLevel/Trash_Sorting/banaan.png" id="1_eeoxa"]


[sub_resource type="RectangleShape2D" id="RectangleShape2D_54ceg"]
size = Vector2(84, 111)

[node name="banaan" type="Node2D"]
script = ExtResource("1_as36p")

[node name="banaan" type="Sprite2D" parent="."]
texture = ExtResource("1_eeoxa")

[node name="Area2D" type="Area2D" parent="banaan"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="banaan/Area2D"]
position = Vector2(12, -5.5)
shape = SubResource("RectangleShape2D_54ceg")

[connection signal="body_entered" from="banaan/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="banaan/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="banaan/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="banaan/Area2D" to="." method="_on_area_2d_mouse_exited"]
